--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,10 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: install linters
+    - name: install testing dependencies
       run: go get -u honnef.co/go/tools/cmd/staticcheck@latest github.com/kisielk/errcheck gitlab.com/opennota/check/cmd/aligncheck gitlab.com/opennota/check/cmd/structcheck gitlab.com/opennota/check/cmd/varcheck github.com/gordonklaus/ineffassign github.com/remyoudompheng/go-misc/deadcode
     - name: build
-      run: PATH=$PATH:$HOME/go/bin ./build.sh -lt
+      run: PATH=$PATH:$HOME/go/bin ./build.sh -T
     - name: run metadb
       run: ./bin/metadb help
     - name: run mdb
