--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,21 +6,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: install golang
-      run: sudo apt install golang-1.16
+      run: sudo apt install golang-1.18
     - name: install vet shadow
-      run: go get golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow@latest
-    - name: install staticcheck
-      run: go get honnef.co/go/tools/cmd/staticcheck@latest
+      run: go install golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow@latest
     - name: install errcheck
-      run: go get github.com/kisielk/errcheck@latest
+      run: go install github.com/kisielk/errcheck@latest
     - name: install ineffassign
-      run: go get github.com/gordonklaus/ineffassign@latest
+      run: go install github.com/gordonklaus/ineffassign@latest
     - name: install deadcode
-      run: go get github.com/remyoudompheng/go-misc/deadcode@latest
+      run: go install github.com/remyoudompheng/go-misc/deadcode@latest
     - name: build
-      run: GOPATH=$HOME/go PATH=$PATH:$GOPATH/bin ./build.sh -T
+      run: GOPATH=$HOME/go PATH=$PATH:$GOPATH/bin ./build.sh -t
     - name: run metadb
       run: ./bin/metadb help
-    - name: run mdb
-      run: ./bin/mdb help
 
