--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,8 +5,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: install golang
-      run: sudo apt install golang-1.18
+    - name: download go
+      run: curl -O https://dl.google.com/go/go1.19.1.linux-amd64.tar.gz
+    - name: install go
+      run: cd /usr/local && tar xf go1.19.1.linux-amd64.tar.gz
     - name: install vet shadow
       run: go install golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow@latest
     - name: install errcheck
