Move go compiler in github action

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,8 +7,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: download go
       run: curl -O https://dl.google.com/go/go1.19.1.linux-amd64.tar.gz
+    - name: unpack go
+      run: mkdir gobuild && cd gobuild && tar xf go1.19.1.linux-amd64.tar.gz
     - name: install go
-      run: cd /usr/local && tar xf go1.19.1.linux-amd64.tar.gz
+      run: mv gobuild/go /usr/local/.
     - name: install vet shadow
       run: go install golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow@latest
     - name: install errcheck
