--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,24 +5,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: install goyacc
-      run: go install golang.org/x/tools/cmd/goyacc@master
-    - name: install ragel
-      run: sudo apt install ragel
     - name: download go
       run: curl -O https://dl.google.com/go/go1.19.1.linux-amd64.tar.gz
     - name: unpack go
-      run: mkdir goinstall && cd goinstall && tar xf ../go1.19.1.linux-amd64.tar.gz
+      run: tar xf ../go1.19.1.linux-amd64.tar.gz
+    - name: install go
+      run: sudo mkdir -p /usr/local/mdb && sudo mv go /usr/local/mdb/
+    - name: install goyacc
+      run: PATH=/usr/local/mdb/go/bin:$PATH go install golang.org/x/tools/cmd/goyacc@master
     - name: install vet shadow
-      run: PATH=$HOME/goinstall/go/bin:$PATH go install golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow@latest
+      run: PATH=/usr/local/mdb/go/bin:$PATH go install golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow@latest
     - name: install errcheck
-      run: PATH=$HOME/goinstall/go/bin:$PATH go install github.com/kisielk/errcheck@latest
+      run: PATH=/usr/local/mdb/go/bin:$PATH go install github.com/kisielk/errcheck@latest
     - name: install ineffassign
-      run: PATH=$HOME/goinstall/go/bin:$PATH go install github.com/gordonklaus/ineffassign@latest
+      run: PATH=/usr/local/mdb/go/bin:$PATH go install github.com/gordonklaus/ineffassign@latest
     - name: install deadcode
-      run: PATH=$HOME/goinstall/go/bin:$PATH go install github.com/remyoudompheng/go-misc/deadcode@latest
+      run: PATH=/usr/local/mdb/go/bin:$PATH go install github.com/remyoudompheng/go-misc/deadcode@latest
+    - name: install ragel
+      run: sudo apt install ragel
     - name: build
-      run: PATH=$HOME/go/bin:$HOME/goinstall/go/bin:$PATH ./build.sh -t
+      run: PATH=$HOME/go/bin:/usr/local/mdb/go/bin:$PATH ./build.sh -t
     - name: run metadb
       run: ./bin/metadb help
 
