--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,18 @@
 name: test
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+      - dev
+  pull_request:
+    types: [opened, synchronize, reopened]
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+      with:
+        fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
     - name: download go
       run: curl -O https://dl.google.com/go/go1.21.4.linux-amd64.tar.gz
     - name: unpack go
@@ -31,3 +39,10 @@ jobs:
       run: go build -o bin ./cmd/marct
     - name: run marct
       run: ./bin/marct -h
+    - name: create test coverage out file
+      run: go test -json -coverprofile=coverage.out ./... > report.json
+    - name: SonarCloud Scan
+      uses: SonarSource/sonarcloud-github-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
