--- a/build
+++ b/build
@@ -16,10 +16,8 @@ usage() {
     echo ''
     echo 'Flags:'
     echo '-T  Run tests'
-    echo '-t  Run tests and other checks; requires'
-    echo '    go install golang.org/x/tools/go/analysis/passes/shadow/cmd/shadow@latest'
+    echo '-t  Run tests and other checks'
     # echo '    go install golang.org/x/tools/cmd/deadcode@latest'
-    echo '    go install github.com/kisielk/errcheck@latest'
     echo '-v  Enable verbose output'
     echo '-f  Fast build (do not remove executable before compiling)'
     echo '-d  Compile with dynamic tags'
@@ -110,11 +108,13 @@ fi
 
 if $runalltests; then
     go vet $v $tags $(go list ./cmd/... | grep -v 'github.com/metadb-project/metadb/cmd/metadb/parser') 2>&1 | while read s; do echo "build.sh: $s" 1>&2; done
-    go vet $v $tags -vettool=$GOPATH/bin/shadow ./cmd/... 2>&1 | while read s; do echo "build.sh: $s" 1>&2; done
+    #go vet $v $tags -vettool=$GOPATH/bin/shadow ./cmd/... 2>&1 | while read s; do echo "build.sh: $s" 1>&2; done
+    go tool shadow ./cmd/...
     # deadcode -test ./cmd/... 2>&1 | while read s; do echo "build.sh: deadcode: $s" 1>&2; done
     if $verbose; then
         # Using -verbose outputs the function signature for .errcheck.
 	verrcheck='-verbose'
     fi
-    errcheck $verrcheck -exclude .errcheck ./cmd/... 2>&1 | while read s; do echo "build.sh: errcheck: $s" 1>&2; done
+    go tool errcheck $verrcheck -exclude .errcheck ./cmd/... 2>&1 | while read s; do echo "build.sh: errcheck: $s" 1>&2; done
+    go tool govulncheck ./cmd/...
 fi
