--- a/build
+++ b/build
@@ -2,7 +2,6 @@
 set -e
 
 fast='false'
-json=''
 runtests='false'
 runalltests='false'
 verbose='false'
@@ -54,7 +53,7 @@ if $verbose; then
 fi
 
 if [[ -v METADB_FOLIO ]]; then
-    echo "build.sh: using folio reference \"$METADB_FOLIO\"" 1>&2
+    echo "build.sh: METADB_FOLIO is no longer supported (see ALTER SYSTEM command)." 1>&2
 fi
 
 tags=''
@@ -77,7 +76,7 @@ mkdir -p $bindir
 
 version=`git describe --tags --always`
 
-go build -o $bindir $v $tags -ldflags "-X github.com/metadb-project/metadb/cmd/metadb/util.MetadbVersion=$version -X github.com/metadb-project/metadb/cmd/metadb/util.FolioVersion=$METADB_FOLIO $json" ./cmd/metadb
+go build -o $bindir $v $tags -ldflags "-X github.com/metadb-project/metadb/cmd/metadb/util.MetadbVersion=$version" ./cmd/metadb
 
 if $runtests || $runalltests; then
     go test $v $tags -vet=off -count=1 ./cmd/metadb/command 1>&2
